2010-02-02  Sancho Lerena <slerena@artica.es>

	* include/javascript/pandora_visual_console.js: Thiner lines in maps.

	* include/functions_visual_map.php: Fixed several issues in visual maps
	(bad hierarchy status color, limited depth for recursion, get unknown
	for agents and modules, and line color is now always associated to
	parent status) and non-status elements like labels, graphs or progress
	bars now doesnt propagate module status to parents.

	* include/functions_db.php:

	* extensions/dbmanager/dbmanager.css,
	  extensions/dbmanager.php: Fixed width of textarea.

	* operation/events/events.php: Fixed bug #2943907.

	* operation/agentes/exportdata.php: Fixed problem exporting CSV
	when data to export is TOO big, using an internal cache to read 
	data.

2010-01-29 Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* godmode/reporting/map_builder.php: use "clean_cache" in the deleting of
	visual map.
	
	* include/functions_db.php: add function "clean_cache" for clean the
	problematic (sometimes) cache.

2010-01-25  Sancho Lerena <slerena@artica.es>

	Merged from trunk:

	* include/functions.php: Fixed problem in show_event_type() function
	who mades events.php to do a invalid filtering by event status.

	* operation/events/events_rss.php: Added optional (commented code)
	support for filtering RSS request by the API ACL. need to implement a switch
	in the config array to use here ACLs or not.

	* operation/events/events.php: Fixed problem filterings events by status 
	(warning, critical, normal and not-normal).

2010-01-20  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Merged from trunk.

2010-01-13  Pablo de la Concepción <pablo.concepcion@artica.es>

	* pandoradb.sql: Changed comment to show this is the official
	tables for 3.0 version instead of 2.0 version

2009-12-29  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: upps, too small, in huge systems could give a 
	problem in the autoinsert ID.
