@@ -1,4 +1,13 @@
-2010-02-02  Sancho Lerena <slerena@artica.es>
+2010-02-01  Raúl Mateos <raulofpandora@gmail.com>
+
+	* operation/agentes/estado_agente.php: Changed colour order for 
+	module status.
+
+	* include/help/en/help_agent_status.php: Improved help.
+
+	* Changelog: Fix date.
+
+2010-02-01  Sancho Lerena <slerena@artica.es>
 
 	* include/javascript/pandora_visual_console.js: Thiner lines in maps.
 
